Wizard: Add restart button
refs #9658

--- a/public/css/icinga/setup.less
+++ b/public/css/icinga/setup.less
@@ -20,6 +20,21 @@
       float: left;
     }
 
+    form[name='setup_restart_form'] button {
+      background: none;
+      border: none;
+      color: #ffffff;
+      cursor: pointer;
+      outline: none;
+      font-size: 1.4em;
+      margin-right: 0.6em;
+      -moz-transform: scale(1, -1);
+      -webkit-transform: scale(1, -1);
+      -o-transform: scale(1, -1);
+      -ms-transform: scale(1, -1);
+      transform: scale(1, -1);
+    }
+
     .progress-bar {
       overflow: hidden;
       padding-top: 1em;
@@ -36,7 +51,7 @@
         }
 
         table {
-          margin-top: 0.7em;
+          margin-top: 0.3em;
 
           td {
             padding: 0;
